--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #8af3a2; }
+  background: #2f433e; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #9b1c59; }
+  background: #47907b; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #f9afb7; }
+  background: #4cb78f; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #bb50b0; }
+  background: #a733fe; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #2379b5; }
+  background: #a838f5; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #d92068; }
+  background: #c65029; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #6406ef; }
+  background: #80c7d1; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #f8a724; }
+  background: #a1e9df; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #912072; }
+  background: #e35797; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #66cfe1; }
+  background: #8b279c; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #371252; }
+  background: #06f39c; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #6e6126; }
+  background: #d503fb; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #51d6ac; }
+  background: #055cb8; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #8e7d30; }
+  background: #75af60; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #c409ac; }
+  background: #b3c3ad; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #33368b; }
+  background: #d98b8c; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #53ac66; }
+  background: #7d09ca; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #157cdb; }
+  background: #f58223; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #a61f79; }
+  background: #b5df59; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #bf0348; }
+  background: #4261b0; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #0104d8; }
+  background: #726699; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #78b3c0; }
+  background: #3ce22f; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #8e088f; }
+  background: #fad57e; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #319a65; }
+  background: #f024ed; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #cd34c7; }
+  background: #837745; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #612a24; }
+  background: #4628f4; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #58751b; }
+  background: #ce18d3; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #1ec11c; }
+  background: #20fffb; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #89f523; }
+  background: #95d9c9; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #f4676b; }
+  background: #58a3b8; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #58495d; }
+  background: #ce2cd1; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #15c71b; }
+  background: #54d3ac; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #0b8488; }
+  background: #204b3f; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #b0ebfc; }
+  background: #5842d3; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #a75362; }
+  background: #5f63f8; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #1c4893; }
+  background: #e2697c; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #342b22; }
+  background: #8f3e83; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #b0e2af; }
+  background: #c2746c; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #2a3d64; }
+  background: #51f64e; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #d22b22; }
+  background: #5b4da5; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #b39a8c; }
+  background: #17120b; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #0d0d74; }
+  background: #863547; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #7b3299; }
+  background: #9f4aa4; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #3709c9; }
+  background: #245208; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #fd0136; }
+  background: #0ff6ab; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #1df367; }
+  background: #bba45d; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #d47019; }
+  background: #f1497a; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #015de3; }
+  background: #0a3003; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #2defbf; }
+  background: #7fa931; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #6c7b6c; }
+  background: #02296f; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #0c65d4; }
+  background: #ae836f; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #92877d; }
+  background: #0f40e1; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #ceadd8; }
+  background: #0af89b; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #b5d60a; }
+  background: #314dbb; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #39ae0d; }
+  background: #1e3cbd; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #463461; }
+  background: #028a4a; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #3b2de1; }
+  background: #6aed2c; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #e211e6; }
+  background: #4648ea; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #7e63fb; }
+  background: #4f71cb; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #83b3ec; }
+  background: #a29f7b; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #2ce15d; }
+  background: #ef27f5; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #56a231; }
+  background: #86782d; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #53602d; }
+  background: #ce63a5; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #22fb03; }
+  background: #72f3dd; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #d6c6ec; }
+  background: #9f7d60; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #9e617c; }
+  background: #89e742; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #08e5d7; }
+  background: #421468; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #5683ea; }
+  background: #97beb4; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #8c51ad; }
+  background: #27a597; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #04cc70; }
+  background: #ca9280; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #7b044f; }
+  background: #d7eed2; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #8b3a1f; }
+  background: #ec7df7; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #2309c5; }
+  background: #5e4fcc; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #1c6f15; }
+  background: #ed6a09; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #5dd0f0; }
+  background: #3d31cd; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #71aff6; }
+  background: #2be6c9; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #f26d39; }
+  background: #b2779b; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #0b013e; }
+  background: #371dc2; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #1af25f; }
+  background: #30d2c2; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #360e2b; }
+  background: #cf48ae; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #1e7b47; }
+  background: #772603; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #5931b6; }
+  background: #351424; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #c4bfce; }
+  background: #a404a9; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #1a57c9; }
+  background: #ca847c; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #166816; }
+  background: #1f6b1b; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #0abf76; }
+  background: #c8f4da; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #3bb616; }
+  background: #9c36ae; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #5811e0; }
+  background: #ba5e86; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #eb5489; }
+  background: #877496; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #890980; }
+  background: #7e8950; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #5737de; }
+  background: #8b3f3c; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #b0a871; }
+  background: #97abe7; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #671a62; }
+  background: #9df8c2; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #be54fd; }
+  background: #2ca3d4; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #172a46; }
+  background: #a7ffdf; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #582c58; }
+  background: #c29024; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #c3d60f; }
+  background: #c0b0e9; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #fb0427; }
+  background: #9b356d; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #4746bc; }
+  background: #6fd8be; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #dbed83; }
+  background: #cafc92; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -16969,13 +16969,15 @@ input:not(:checked) + .slider-switch > .switch-non {
 .left-guide-nav-div ul li ul li {
   font-size: 15px;
   margin: 10px 0px;
-  font-weight: 400; }
+  font-weight: normal;
+  font-family: "proxima-regular" !important; }
 
 .left-guide-nav-div ul li ul li a {
   font-size: 15px;
-  font-weight: 400;
   text-decoration: none;
-  color: #4C4C4C; }
+  color: #4C4C4C;
+  font-weight: normal;
+  font-family: "proxima-regular" !important; }
 
 #button-up {
   display: flex;
