--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -5106,13 +5106,16 @@ height: 300px;
 .left-guide-nav-div ul li ul li {
   font-size: 15px;
   margin: 10px 0px;
-  font-weight: 400;
+  font-weight: normal;
+  font-family: "proxima-regular" !important;
 }
 .left-guide-nav-div ul li ul li a{
   font-size: 15px;
-  font-weight: 400;
   text-decoration: none;
   color: #4C4C4C;
+  font-weight: normal;
+  font-family: "proxima-regular" !important;
+
 }
 #button-up {
   display: flex;
