--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #2f433e; }
+  background: #aa3fcc; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #47907b; }
+  background: #e0065d; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #4cb78f; }
+  background: #98bfa8; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #a733fe; }
+  background: #a9bc38; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #a838f5; }
+  background: #d275f0; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #c65029; }
+  background: #04ac84; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #80c7d1; }
+  background: #123e0a; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #a1e9df; }
+  background: #de810b; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #e35797; }
+  background: #608776; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #8b279c; }
+  background: #ac0932; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #06f39c; }
+  background: #2f706d; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #d503fb; }
+  background: #72a1d0; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #055cb8; }
+  background: #f5e3e6; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #75af60; }
+  background: #a54859; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #b3c3ad; }
+  background: #d65eb6; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #d98b8c; }
+  background: #1862bc; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #7d09ca; }
+  background: #fdca5c; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #f58223; }
+  background: #711011; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #b5df59; }
+  background: #65bd93; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #4261b0; }
+  background: #4d1e5e; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #726699; }
+  background: #76bd68; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #3ce22f; }
+  background: #1d2cdb; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #fad57e; }
+  background: #127664; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #f024ed; }
+  background: #825ead; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #837745; }
+  background: #f7e073; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #4628f4; }
+  background: #ad2f7f; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #ce18d3; }
+  background: #524ff4; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #20fffb; }
+  background: #b2a7e3; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #95d9c9; }
+  background: #185c3a; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #58a3b8; }
+  background: #9679f1; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #ce2cd1; }
+  background: #ccfce5; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #54d3ac; }
+  background: #77edf6; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #204b3f; }
+  background: #5d98ab; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #5842d3; }
+  background: #8ed3a4; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #5f63f8; }
+  background: #78727d; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #e2697c; }
+  background: #163b9e; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #8f3e83; }
+  background: #645115; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #c2746c; }
+  background: #d5cf52; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #51f64e; }
+  background: #b81f55; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #5b4da5; }
+  background: #8f2c77; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #17120b; }
+  background: #82cea6; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #863547; }
+  background: #56fe5d; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #9f4aa4; }
+  background: #724eaf; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #245208; }
+  background: #17f4f8; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #0ff6ab; }
+  background: #d3f2cf; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #bba45d; }
+  background: #cfbd91; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #f1497a; }
+  background: #fa1c28; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #0a3003; }
+  background: #08f498; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #7fa931; }
+  background: #392307; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #02296f; }
+  background: #3fac92; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #ae836f; }
+  background: #a11acc; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #0f40e1; }
+  background: #6cf406; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #0af89b; }
+  background: #5ec798; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #314dbb; }
+  background: #c9e90d; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #1e3cbd; }
+  background: #dbbe53; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #028a4a; }
+  background: #b6dd9a; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #6aed2c; }
+  background: #01d3f4; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #4648ea; }
+  background: #92e2f9; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #4f71cb; }
+  background: #68928c; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #a29f7b; }
+  background: #aec10a; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #ef27f5; }
+  background: #5a0dad; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #86782d; }
+  background: #0e93e2; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #ce63a5; }
+  background: #2629dc; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #72f3dd; }
+  background: #f1fc9f; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #9f7d60; }
+  background: #ad3354; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #89e742; }
+  background: #fd2ed8; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #421468; }
+  background: #99f80c; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #97beb4; }
+  background: #9df59d; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #27a597; }
+  background: #869bea; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #ca9280; }
+  background: #86991c; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #d7eed2; }
+  background: #64a8ef; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #ec7df7; }
+  background: #2ea2c3; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #5e4fcc; }
+  background: #60e032; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #ed6a09; }
+  background: #c1b5f5; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #3d31cd; }
+  background: #fab44c; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #2be6c9; }
+  background: #5074bd; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #b2779b; }
+  background: #abf1c6; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #371dc2; }
+  background: #fecc64; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #30d2c2; }
+  background: #4adc86; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #cf48ae; }
+  background: #4c6932; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #772603; }
+  background: #3421da; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #351424; }
+  background: #7b722e; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #a404a9; }
+  background: #fb8a7b; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #ca847c; }
+  background: #f93eb2; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #1f6b1b; }
+  background: #08b3f3; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #c8f4da; }
+  background: #280c9e; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #9c36ae; }
+  background: #039b9b; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #ba5e86; }
+  background: #e81f99; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #877496; }
+  background: #45b058; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #7e8950; }
+  background: #d1ce18; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #8b3f3c; }
+  background: #842204; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #97abe7; }
+  background: #4b350a; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #9df8c2; }
+  background: #539ede; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #2ca3d4; }
+  background: #f3db0d; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #a7ffdf; }
+  background: #d4f121; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #c29024; }
+  background: #baba62; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #c0b0e9; }
+  background: #f652d9; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #9b356d; }
+  background: #df632a; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #6fd8be; }
+  background: #8f1d53; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #cafc92; }
+  background: #fce837; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
